2015-05-21:

* The Code 128 encoder was improved to perform automatic encoding of extended ASCII data using FNC4.


2015-05-16:

* The Code One encoder was optimised to minimise the symbol size.
* A minor improvement was made to the Data Matrix optimised encoding.


2015-05-09:

* The Code One encoder was amended to allow direct entry of values for type-S symbols.


2015-03-24:

* The ITF-14 encoder was amended to permit spaces in the human readable text.


2015-03-23:

* The SSCC-18 and EAN-14 encoders were amended to permit spaces in the human readable text.


2015-02-18:

* The PDF and HTML documentation has been significantly refreshed and is now built directly from wiki content. It is included in the release tarballs.


2015-01-15:

* Convenience encoders for Compact PDF417, Compact Aztec Code and Aztec Runes were added.


2014-12-29:

* A convenience encoder for Telepen Numeric was added.


2014-12-27:

* Convenience encoders for Micro QR Code, Industrial 2 of 5, IATA 2 of 5, Matrix 2 of 5, COOP 2 of 5 and Datalogic 2 of 5 were added.


2014-12-11:

* A bug resulting in the failure to encode certain characters in QR Code was fixed.


2014-11-12:

* The UPC-A encoder was amended to automatically expand UPC-E input.
* The UPC-E encoder was amended to automatically compress UPC-A input.


2014-11-08:

* The UPC-A encoder was amended to expand UPC-E input using the expandupce option.
* The UPC-E encoder was amended to compress UPC-A input using the compressupca option.


2014-08-15:

* Remove some unused code.
* This project is dedicated to the memory of Craig K. Harmon. https://qed.org/ckh


2014-07-30-1:

* Incorrect character mappings for TEXT and C40 encodings in Data Matrix were fixed.


2014-07-30:

* The Data Matrix encoder was optimised to minimise the symbol size.


2014-07-15-1:

* A bug in the QR Code encoder was fixed.


2014-07-15:

* The QR Code encoder was optimised to minimise the symbol size.


2014-06-30-1:
