@@ -1788,9 +1788,10 @@ make</code></pre>
 <p>Standards: ANSI/AIM BC7 - USS Code 16K, BS EN 12323.</p>
 <h3 id="data-and-options-55">Data and Options</h3>
 <ul>
-<li>The input can consist of any ASCII data.<br /></li>
+<li>The input can consist of any 256-bit extended ASCII data.<br /></li>
+<li><em>FNC4</em> function characters will be inserted automatically to allow the encoding of extended ASCII characters.<br /></li>
 <li>When the <strong>parse</strong> option is specified, any instances of <code>^NNN</code> in the data field are replaced with their equivalent ASCII value, useful for specifying unprintable characters.<br /></li>
-<li>When the <strong>parsefnc</strong> option is specified, non-data function characters can be specified by <code>^FNC1</code> through <code>^FNC4</code>.<br /></li>
+<li>When the <strong>parsefnc</strong> option is specified, non-data function characters can be specified by <code>^FNC1</code> through <code>^FNC3</code>.<br /></li>
 <li><p>The <strong>mode</strong> option specifies the mode for the symbol. It is usual to leave this unspecified in which case the most appropriate mode that results in the shortest symbol is automatically selected based in the input data.</p>
 <ul>
 <li><code>mode=0</code> - Starting code set A<br /></li>
@@ -2047,7 +2048,8 @@ make</code></pre>
 <ul>
 <li><p>The data field can hold the following:</p>
 <ul>
-<li>For <em>standard</em> symbols: Any ASCII data<br /></li>
+<li>For <em>standard</em> symbols: Any 256-bit extended ASCII data.<br /></li>
+<li><em>FNC4</em> function characters will be inserted automatically to allow the encoding of extended ASCII characters.<br /></li>
 <li>For <em>limited</em> symbols: letters <code>A-Z</code>, digits <code>0-9</code>, symbols <code>-</code> and <code>.</code><br /></li>
 </ul></li>
 <li><p>The <strong>version</strong> option is used to specify the variant of the symbol, either:</p>
@@ -2058,7 +2060,7 @@ make</code></pre>
 <li><code>version=limitedb</code><br /></li>
 </ul></li>
 <li>When the <strong>parse</strong> option is specified, any instances of <code>^NNN</code> in the data field are replaced with their equivalent ASCII value, useful for specifying unprintable characters, e.g. <code>^029</code> for <em>GS</em>, etc.<br /></li>
-<li>When the <strong>parsefnc</strong> option is specified, non-data function characters can be specified by <code>^FNC1</code> through <code>^FNC4</code>.<br /></li>
+<li>When the <strong>parsefnc</strong> option is specified, non-data function characters can be specified by <code>^FNC1</code> through <code>^FNC3</code>.<br /></li>
 <li><p>The <strong>inkspread</strong> option can be used to adjust the width of the bars.</p></li>
 </ul>
 <h3 id="example-posicode">Example PosiCode</h3>
