@@ -1,3 +1,8 @@
+2015-05-22:
+
+* The PosiCode encoder was improved to perform automatic encoding of extended ASCII data using FNC4.
+* The Code 16K encoder was improved to perform automatic encoding of extended ASCII data using FNC4.
+
 2015-05-21:
 
 * The Code 128 encoder was improved to perform automatic encoding of extended ASCII data using FNC4.
